kubernetes/k8s-manifests/microservice-customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-customer
  namespace: garage
  labels:
    app: microservice-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-customer
  template:
    metadata:
      labels:
        app: microservice-customer
    spec:
      containers:
      - name: customer-container-service
        image: nozomihub/customer-service:78396f5b
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: garage
spec:
  selector:
    app: microservice-customer
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
