kubernetes/k8s-manifests/microservice-vehicle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-vehicle
  namespace: garage
  labels:
    app: microservice-vehicle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-vehicle
  template:
    metadata:
      labels:
        app: microservice-vehicle
    spec:
      containers:
      - name: vehicle-container-service
        image: nozomihub/vehicle-service:b4c1776d
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle-service
  namespace: garage
spec:
  selector:
    app: microservice-vehicle
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
