kubernetes/k8s-manifests/microservice-workshop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-workshop
  namespace: garage
  labels:
    app: microservice-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-workshop
  template:
    metadata:
      labels:
        app: microservice-workshop
    spec:
      containers:
      - name: workshop-container-service
        image: nozomihub/workshop-service:704e2bc4
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
  namespace: garage
spec:
  selector:
    app: microservice-workshop
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
