kubernetes/k8s-manifests/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: garage
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq-container-service
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # RabbitMQ port for apps to connect
            - containerPort: 15672 # Management UI port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: garage
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30200 # Define NodePort for management UI
  type: NodePort
