kubernetes/k8s-manifests/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: garage
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-container-service
        image: nozomihub/webapp-service:9d9cfda3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: garage
spec: 
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
